feat: Utilize jlink & jdeps to create a minimal image